# O-Complex-test-tusk

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
weather/: admin.py  forms.py  models.py  urls.py  views.py
weather/migrations/: 0001_initial.py  0002_remove_searchhistory_session_key_searchhistory_user.py
weather/services/: errors.py  get_weather.py
weather/templates/weather/: display_weather.html  get_weather.html
