[tool.poetry]
name = "o-complex"
version = "0.1.0"
description = ""
authors = ["Andreev <151520440+DeadGEEK990@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
asgiref = "3.8.1"
black = "25.1.0"
certifi = "2025.4.26"
charset-normalizer = "3.4.2"
click = "8.2.1"
colorama = "0.4.6"
django = "5.2.1"
idna = "3.10"
mypy-extensions = "1.1.0"
packaging = "25.0"
pathspec = "0.12.1"
platformdirs = "4.3.8"
requests = "2.32.3"
sqlparse = "0.5.3"
tzdata = "2025.2"
urllib3 = "2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
